<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>pt.ulisboa.depchain</groupId>
  <artifactId>depchain</artifactId>
  <version>0.1.0</version>
  <name>depchain</name>

  <properties>
    <maven.compiler.release>21</maven.compiler.release>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jackson.version>2.21.2</jackson.version>
    <junit.version>6.0.3</junit.version>
    <awaitility.version>4.3.0</awaitility.version>
    <assertj.version>3.27.6</assertj.version>
    <mockito.version>5.20.0</mockito.version>
    <bytebuddy.version>1.17.7</bytebuddy.version>
    <picocli.version>4.7.7</picocli.version>
    <netty.version>4.2.9.Final</netty.version>
    <surefire.version>3.5.5</surefire.version>
    <protobuf.version>4.34.1</protobuf.version>
    <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
    <os.maven.version>1.7.1</os.maven.version>
    <protovalidate.version>1.1.1</protovalidate.version>
    <threshold.sig.version>1.3</threshold.sig.version>
    <curve25519.elisabeth.version>0.1.5</curve25519.elisabeth.version>
    <slf4j.version>2.0.17</slf4j.version>
    <logback.version>1.5.32</logback.version>
    <bouncycastle.version>1.83</bouncycastle.version>
    <besu.evm.version>25.6.0</besu.evm.version>
    <besu.datatypes.version>25.6.0</besu.datatypes.version>
    <tuweni.version>2.3.1</tuweni.version>
    <jdt.annotation.version>2.4.100</jdt.annotation.version>
    <compiler.plugin.version>3.15.0</compiler.plugin.version>
    <impsort.plugin.version>1.13.0</impsort.plugin.version>
    <enforcer.plugin.version>3.6.2</enforcer.plugin.version>
    <exec.plugin.version>3.6.3</exec.plugin.version>
  </properties>

  <repositories>
    <repository>
      <id>hyperledger-besu</id>
      <url>https://hyperledger.jfrog.io/artifactory/besu-maven/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.awaitility</groupId>
      <artifactId>awaitility</artifactId>
      <version>${awaitility.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.assertj</groupId>
      <artifactId>assertj-core</artifactId>
      <version>${assertj.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.bytebuddy</groupId>
      <artifactId>byte-buddy-agent</artifactId>
      <version>${bytebuddy.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.weavechain</groupId>
      <artifactId>threshold-sig</artifactId>
      <version>${threshold.sig.version}</version>
    </dependency>
    <dependency>
      <groupId>com.weavechain</groupId>
      <artifactId>curve25519-elisabeth</artifactId>
      <version>${curve25519.elisabeth.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.protobuf</groupId>
      <artifactId>protobuf-java</artifactId>
      <version>${protobuf.version}</version>
    </dependency>
    <dependency>
      <groupId>build.buf</groupId>
      <artifactId>protovalidate</artifactId>
      <version>${protovalidate.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>ch.qos.logback</groupId>
      <artifactId>logback-classic</artifactId>
      <version>${logback.version}</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk18on</artifactId>
      <version>${bouncycastle.version}</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk18on</artifactId>
      <version>${bouncycastle.version}</version>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jdt</groupId>
      <artifactId>org.eclipse.jdt.annotation</artifactId>
      <version>${jdt.annotation.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hyperledger.besu</groupId>
      <artifactId>evm</artifactId>
      <version>${besu.evm.version}</version>
    </dependency>
    <dependency>
      <groupId>org.hyperledger.besu</groupId>
      <artifactId>besu-datatypes</artifactId>
      <version>${besu.datatypes.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.tuweni</groupId>
      <artifactId>tuweni-bytes</artifactId>
      <version>${tuweni.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.tuweni</groupId>
      <artifactId>tuweni-units</artifactId>
      <version>${tuweni.version}</version>
    </dependency>
    <dependency>
      <groupId>info.picocli</groupId>
      <artifactId>picocli</artifactId>
      <version>${picocli.version}</version>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-all</artifactId>
      <version>${netty.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>kr.motd.maven</groupId>
        <artifactId>os-maven-plugin</artifactId>
        <version>${os.maven.version}</version>
        <extensions>true</extensions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-enforcer-plugin</artifactId>
        <version>${enforcer.plugin.version}</version>
        <executions>
          <execution>
            <id>enforce-toolchain</id>
            <goals>
              <goal>enforce</goal>
            </goals>
            <configuration>
              <rules>
                <requireMavenVersion>
                  <version>[3.6.3,)</version>
                </requireMavenVersion>
                <requireJavaVersion>
                  <version>[21,)</version>
                </requireJavaVersion>
              </rules>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${compiler.plugin.version}</version>
        <configuration>
          <release>${maven.compiler.release}</release>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.xolstice.maven.plugins</groupId>
        <artifactId>protobuf-maven-plugin</artifactId>
        <version>${protobuf.plugin.version}</version>
        <configuration>
          <protocArtifact>com.google.protobuf:protoc:${protobuf.version}:exe:${os.detected.classifier}</protocArtifact>
          <protoSourceRoot>${project.basedir}/src/main/proto</protoSourceRoot>
          <checkStaleness>true</checkStaleness>
        </configuration>
        <executions>
          <execution>
            <id>compile-protobuf</id>
            <phase>generate-sources</phase>
            <goals>
              <goal>compile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>net.revelc.code</groupId>
        <artifactId>impsort-maven-plugin</artifactId>
        <version>${impsort.plugin.version}</version>
        <configuration>
          <directories>
            <directory>${project.basedir}/src/main/java</directory>
            <directory>${project.basedir}/src/test/java</directory>
          </directories>
          <removeUnused>true</removeUnused>
          <groups>java.,javax.,org.,com.,pt.</groups>
          <excludes>
            <exclude>target/generated-sources/**/*.java</exclude>
            <exclude>target/generated-test-sources/**/*.java</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <id>sort-imports</id>
            <phase>validate</phase>
            <goals>
              <goal>sort</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar -XX:+EnableDynamicAgentLoading</argLine>
          <includes>
            <include>**/ERC20FrontrunningTest.java</include>
          </includes>
          <excludedGroups>integration</excludedGroups>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${surefire.version}</version>
        <configuration>
          <argLine>-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar -XX:+EnableDynamicAgentLoading</argLine>
          <includes>
            <include>**/ByzantineLeaderIntegrationTest.java</include>
            <include>**/ByzantineReplicaIntegrationTest.java</include>
            <include>**/AuthenticatedIngressIntegrationTest.java</include>
            <include>**/MaliciousClientIntegrationTest.java</include>
            <include>**/AdversarialNetworkClusterIntegrationTest.java</include>
            <include>**/HonestClusterIntegrationTest.java</include>
            <include>**/PersistenceFailureIntegrationTest.java</include>
            <include>**/QueryAndContractIntegrationTest.java</include>
          </includes>
          <groups>integration</groups>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>${exec.plugin.version}</version>
        <executions>
          <execution>
            <id>populate</id>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <mainClass>pt.ulisboa.depchain.tool.keymaterial.KeyMaterialApplication</mainClass>
            </configuration>
          </execution>
          <execution>
            <id>server</id>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <mainClass>pt.ulisboa.depchain.server.bootstrap.ServerApplication</mainClass>
            </configuration>
          </execution>
          <execution>
            <id>client</id>
            <goals>
              <goal>java</goal>
            </goals>
            <configuration>
              <mainClass>pt.ulisboa.depchain.client.bootstrap.ClientApplication</mainClass>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

</project>
